--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "lexgit",
-  "module": "index.ts",
   "type": "module",
-  "private": true,
+  "module": "index.ts",
+  "scripts": {
+    "lint": "oxlint --fix",
+    "fmt": "oxfmt"
+  },
+  "dependencies": {
+    "oxfmt": "^0.27.0"
+  },
   "devDependencies": {
     "@types/bun": "latest",
-    "biome": "0.3.3",
-    "valibot": "1.2.0",
-    "typescript": "5.9.3"
+    "oxlint": "1.42.0",
+    "typescript": "5.9.3",
+    "valibot": "1.2.0"
   }
 }
