--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fmt": "oxfmt"
   },
   "dependencies": {
+    "@praha/byethrow": "0.9.0",
     "oxfmt": "^0.27.0"
   },
   "devDependencies": {
