--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "module": "index.ts",
   "scripts": {
+    "build": "bun build --compile index.ts",
     "lint": "oxlint --fix",
     "fmt": "oxfmt"
   },
