setup compile script

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules
 out
 dist
 *.tgz
+bin
 
 # code coverage
 coverage
@@ -36,3 +37,4 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 # Agents
 PLAN.md
 TASK.md
+
