--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "module": "index.ts",
   "scripts": {
-    "build": "bun build --compile index.ts",
+    "compile": "bun build --compile index.ts --outfile bin/lexica",
     "lint": "oxlint --fix",
     "fmt": "oxfmt"
   },
