--- a/.github/workflows/ci-lint-format.yml
+++ b/.github/workflows/ci-lint-format.yml
@@ -1,11 +1,11 @@
-name: test
+name: ci-lint-format
 
 on:
   push:
   pull_request:
 
 jobs:
-  test:
+  lint_format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -14,5 +14,7 @@ jobs:
           bun-version: 1.3.6
       - name: Install dependencies
         run: bun install
-      - name: Run tests
-        run: bun test
+      - name: Lint
+        run: bun run lint
+      - name: Format
+        run: bun run fmt
