--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "lexgit",
+  "name": "@philomagi/lexica",
+  "version": "0.0.1",
   "type": "module",
   "module": "index.ts",
   "scripts": {
     "compile": "bun build --compile index.ts --outfile bin/lexica",
     "lint": "oxlint --fix",
     "fmt": "oxfmt",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "cs": "changeset"
   },
   "dependencies": {
     "@praha/byethrow": "0.9.0",
-    "oxfmt": "^0.27.0"
+    "valibot": "1.2.0"
   },
   "devDependencies": {
+    "@changesets/cli": "2.29.8",
     "@types/bun": "latest",
+    "oxfmt": "^0.27.0",
     "oxlint": "1.42.0",
-    "typescript": "5.9.3",
-    "valibot": "1.2.0"
+    "typescript": "5.9.3"
   }
 }
