--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "type": "module",
   "module": "index.ts",
+  "license": "MIT",
   "scripts": {
     "compile": "bun build --compile index.ts --outfile bin/lexica",
     "compile:dev": "bun lint && bun fmt && bun check-types && bun compile",
