--- a/.github/workflows/release-npm.yml
+++ b/.github/workflows/release-npm.yml
@@ -18,6 +18,8 @@ jobs:
           bun-version: 1.3.6
       - name: Install dependencies
         run: bun install --frozen-lockfile
+      - name: compile single file binary
+        run: bun comipile
       - name: Publish to npm
         run: bun publish --access public
 
