--- a/.github/workflows/release-npm.yml
+++ b/.github/workflows/release-npm.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: npm
     permissions:
-      id-token: write  # OIDC
+      id-token: write # OIDC
       contents: read
     steps:
       - uses: actions/checkout@v4
@@ -18,8 +18,10 @@ jobs:
           bun-version: 1.3.6
       - name: Install dependencies
         run: bun install --frozen-lockfile
+      - name: test
+        run: bun test
       - name: compile single file binary
-        run: bun comipile
+        run: bun compile
       - name: Publish to npm
-        run: bun publish --access public
-
+        # https://github.com/oven-sh/bun/issues/15601#issuecomment-3713706799
+        run: bunx npm publish --provenance
