--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@philomagi/lexica",
   "version": "0.0.1",
-  "type": "module",
-  "module": "index.ts",
   "license": "MIT",
   "files": [
     "LICENSE",
     "bin/lexica"
   ],
+  "type": "module",
+  "module": "index.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "compile": "bun build --compile index.ts --outfile bin/lexica",
     "compile:dev": "bun lint && bun fmt && bun check-types && bun compile",
