--- a/.github/workflows/release-npm.yml
+++ b/.github/workflows/release-npm.yml
@@ -2,7 +2,8 @@ name: release-npm
 
 on:
   release:
-    types: [published]
+    types:
+      - published
   workflow_dispatch:
 
 jobs:
@@ -14,6 +15,11 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
+      # https://github.com/oven-sh/bun/issues/15601#issuecomment-3713706799
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '24'
+          registry-url: 'https://registry.npmjs.org'
       - uses: oven-sh/setup-bun@v1
         with:
           bun-version: 1.3.6
