--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "LICENSE",
     "bin/lexica"
   ],
+  "homepage": "https://github.com/tooppoo/lexica",
+  "repository": "https://github.com/tooppoo/lexica",
+  "bugs": {
+    "email": "tooppoo56@gmail.com",
+    "url": "https://github.com/tooppoo/lexica"
+  },
+  "author": "philomagi <tooppoo56@gmail.com>",
   "type": "module",
   "module": "index.ts",
   "publishConfig": {
