fix binary config

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@philomagi/lexica",
   "version": "0.0.2",
   "license": "MIT",
+  "bin": {
+    "lexica": "bin/lexica"
+  },
   "files": [
     "LICENSE",
     "bin/lexica"
