--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,8 +35,8 @@ jobs:
       # https://github.com/oven-sh/bun/issues/15601#issuecomment-3713706799
       - uses: actions/setup-node@v4
         with:
-          node-version: '24'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "24"
+          registry-url: "https://registry.npmjs.org"
       - uses: oven-sh/setup-bun@v1
         with:
           bun-version: 1.3.6
@@ -49,4 +49,3 @@ jobs:
       - name: Publish to npm
         # https://github.com/oven-sh/bun/issues/15601#issuecomment-3713706799
         run: bunx npm publish --provenance
-
