--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@philomagi/lexica",
   "version": "0.0.3",
+  "version": "0.0.3",
   "homepage": "https://github.com/tooppoo/lexica",
   "bugs": {
     "url": "https://github.com/tooppoo/lexica",
