--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "lint": "oxlint --fix",
     "fmt": "oxfmt",
     "check-types": "tsc --noEmit",
-    "cs": "changeset"
+    "cs": "changeset",
+    "tsg": "tsg --stdout"
   },
   "dependencies": {
     "@praha/byethrow": "0.9.0",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@changesets/cli": "2.29.8",
     "@types/bun": "latest",
+    "@ysk8hori/typescript-graph": "0.26.5",
     "oxfmt": "^0.27.0",
     "oxlint": "1.42.0",
     "typescript": "5.9.3"
