--- a/.tsgrc.json
+++ b/.tsgrc.json
@@ -1,8 +1,4 @@
 {
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["src"]
 }
